compiler/fir/analysis-tests/testData/resolve/problems/incompleteUserType.kt
// RUN_PIPELINE_TILL: FRONTEND
fun foo(a : <!UNRESOLVED_REFERENCE!>Unresolved<!>.<!SYNTAX!><!>) {}
